Change on: branch to master

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,4 +22,4 @@ deploy:
         keep-history: true
         target-branch: gh-pages
         on:
-                branch: gh-pages
+                branch: master
