--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "main": "index.js",
+  "homepaage": "https://taha.js.org",
   "directories": {
     "main": "main",
     "blog": "blog"
   },
   "scripts": {
-    "blog:build": "vuepress build"
+    "predeploy": "vuepress build",
+    "deploy": "gh-pages -d public"
   },
   "dependencies": {
     "css-prefers-color-scheme": "^4.0.0",
@@ -17,6 +19,7 @@
   "devDependencies": {
     "@vuepress/plugin-blog": "^1.2.4",
     "@vuepress/plugin-pwa": "^1.0.0-rc.1",
-    "@vuepress/theme-blog": "^1.2.2"
+    "@vuepress/theme-blog": "^1.2.2",
+    "gh-pages": "^2.0.1"
   }
 }
