--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "css-prefers-color-scheme": "^4.0.0",
     "eslint": "^6.0.1",
     "moment": "^2.24.0",
+    "vazir-font": "^20.1.0",
     "vuepress": "^1.0.2",
     "yaml-front-matter": "^4.0.0"
   },
